@@ -1,4 +1,4 @@
-% File src/library/graphics/man/raster.Rd
+% File src/library/graphics/man/rasterImage.Rd
 % Part of the R package, http://www.R-project.org
 % Copyright 1995-2011 R Core Development Team
 % Distributed under GPL 2 or later
